# mapa-archipielago-humboldt

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  generar_mapa.py  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: test_generar_mapa.py  test_posicionamiento.py
